--- a/src/app/jitsi/jitsi.component.html
+++ b/src/app/jitsi/jitsi.component.html
@@ -1,5 +1,6 @@
 <div id="jitsi-iframe"></div>
 
+<button (click)="handleNewMeet()" style="margin: 2rem;">Call</button>
 <div class="item-center">
     <span>Custom Controls</span>
 </div>
