--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 
 <div class="content" role="main">
     <router-outlet></router-outlet>
-    <footer>
+    <!-- <footer>
         Love This Project?&nbsp;
         <a href="https://github.com/angular/angular" target="_blank" rel="noopener"> Give our repo a star.
             <div class="github-star-badge">
@@ -28,5 +28,5 @@
                 Star
             </div>
         </a>
-    </footer>
+    </footer> -->
 </div>
