--- a/src/app/jitsi/jitsi.component.html
+++ b/src/app/jitsi/jitsi.component.html
@@ -1,13 +1,20 @@
 <div id="jitsi-iframe"></div>
 
+<label for="roomName">Enter Room Name:</label>
+<input type="text" id="roomName" [(ngModel)]="room">
+
 <button (click)="handleNewMeet()" style="margin: 2rem;">Call</button>
+
+<button (click)="handleLeaveCall()" style="margin: 2rem;">Leave Call (Leave the meeting)</button>
+<button (click)="handleEndCall()" style="margin: 2rem;">End Call (End the meeting for Everyone)</button>
+
 <div class="item-center">
-    <span>Custom Controls</span>
+    <!-- <span>Custom Controls</span> -->
 </div>
-<div class="item-center">
+<!-- <div class="item-center">
     <span>&nbsp;&nbsp;</span>
     <i (click)="executeCommand('toggleAudio')" class="fas fa-2x grey-color" [ngClass]="isAudioMuted ? 'fa-microphone-slash' : 'fa-microphone'" aria-hidden="true" title="Mute / Unmute"></i>
-    <i (click)="executeCommand('hangup')" class="fas fa-phone-slash fa-2x red-color" aria-hidden="true" title="Leave"></i>
+    <i (click)="executeCommand('isVideoMuted')" class="fas fa-phone-slash fa-2x red-color" aria-hidden="true" title="Leave"></i>
     <i (click)="executeCommand('toggleVideo')" class="fas fa-2x grey-color" [ngClass]="isVideoMuted ? 'fa-video-slash' : 'fa-video'" aria-hidden="true" title="Start / Stop camera"></i>
     <i (click)="executeCommand('toggleShareScreen')" class="fas fa-film fa-2x grey-color" aria-hidden="true" title="Share your screen"></i>
-</div>
+</div> -->
