added resolution and auto recording

--- a/src/app/jitsi/jitsi.component.html
+++ b/src/app/jitsi/jitsi.component.html
@@ -7,6 +7,7 @@
 
 <button (click)="handleLeaveCall()" style="margin: 2rem;">Leave Call (Leave the meeting)</button>
 <button (click)="handleEndCall()" style="margin: 2rem;">End Call (End the meeting for Everyone)</button>
+<button (click)="handleStartRecording()" style="margin: 2rem;">Start Recording</button>
 
 <div class="item-center">
     <!-- <span>Custom Controls</span> -->
