time filter and timeout added

--- a/src/app/patient-screen/patient-screen.component.html
+++ b/src/app/patient-screen/patient-screen.component.html
@@ -30,5 +30,7 @@
           </div>
       </div>
       <button class="modal-close is-large" aria-label="close" (click)="closeModal()">Close</button>
+      <p>Time remaining: {{ remainingTime }}</p>
     </div>
   </div>
+  
