--- a/src/app/test-patient/test-patient.component.html
+++ b/src/app/test-patient/test-patient.component.html
@@ -25,9 +25,9 @@
     <div class="modal-content">
       <div style="display: flex; gap: 1rem;">
           <div id="jitsi-iframe"></div>
-          <div style="background-color: black; display: flex; justify-content: center; align-items: center;">
+          <!-- <div style="background-color: black; display: flex; justify-content: center; align-items: center;">
             <video style="margin: 8px; width: 500px; height: 270px; border-radius: 6px;" #localVideo autoplay></video>
-          </div>
+          </div> -->
       </div>
       <div style="display: flex; justify-content: space-between; margin-top: 1rem;">
         <button class="modal-close is-large" aria-label="close" (click)="handleStartRecording()">Start Recording</button>
