--- a/src/app/patient-screen/patient-screen.component.html
+++ b/src/app/patient-screen/patient-screen.component.html
@@ -25,12 +25,20 @@
     <div class="modal-content">
       <div style="display: flex; gap: 1rem;">
           <div id="jitsi-iframe"></div>
-          <div style="background-color: black; display: flex; justify-content: center; align-items: center;">
+          <!-- <div style="background-color: black; display: flex; justify-content: center; align-items: center;">
             <video style="margin: 8px; width: 500px; height: 270px; border-radius: 6px;" #localVideo autoplay></video>
-          </div>
+          </div> -->
       </div>
-      <button class="modal-close is-large" aria-label="close" (click)="closeModal()">Close</button>
+      <div style="display: flex; justify-content: space-between; margin-top: 1rem;">
+        <!-- <button class="modal-close is-large" aria-label="close" (click)="handleStartRecording()">Start Recording</button>
+        <button class="modal-close is-large" aria-label="close" (click)="getRoomInfo()">Get Room Info</button> -->
+        <button class="modal-close is-large" aria-label="close" (click)="closeModal()">Close</button>
+      </div>
       <p>Time remaining: {{ remainingTime }}</p>
     </div>
   </div>
   
+  <audio id="ringingAudio"  loop>
+    <source src="http://www.samhallas.co.uk/repository/recordings/706_bell.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
