--- a/src/app/test-doctor/test-doctor.component.html
+++ b/src/app/test-doctor/test-doctor.component.html
@@ -28,9 +28,9 @@
     <div class="modal-content">
       <div style="display: flex; gap: 1rem;">
           <div id="jitsi-iframe"></div>
-          <div style="background-color: black; display: flex; justify-content: center; align-items: center;">
+          <!-- <div style="background-color: black; display: flex; justify-content: center; align-items: center;">
             <video style="margin: 8px; width: 500px; height: 270px; border-radius: 6px;" #localVideo autoplay></video>
-          </div>
+          </div> -->
       </div>
       <button class="modal-close is-large" aria-label="close" (click)="closeModal()">Close</button>
     </div>
