changes done to prod

--- a/src/app/doctor-screen/doctor-screen.component.html
+++ b/src/app/doctor-screen/doctor-screen.component.html
@@ -35,4 +35,8 @@
       <button class="modal-close is-large" aria-label="close" (click)="closeModal()">Close</button>
     </div>
   </div>
-  
+
+  <audio id="ringingAudio"  loop>
+    <source src="http://www.samhallas.co.uk/repository/recordings/706_bell.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
