--- a/src/app/patient-screen/patient-screen.component.css
+++ b/src/app/patient-screen/patient-screen.component.css
@@ -52,3 +52,26 @@ table, th, td {
     width: 500px !important; /* Adjust to your layout */
     height: 500px !important; /* Maintain the aspect ratio */
   }
+
+  .corner-container{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 500px;
+    height: 300px;
+    border: 2px solid;
+    padding: 10px;
+    background: #FFF;
+  }
+
+  .expanded-container{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+    height: 50%;
+    border: 2px solid;
+    padding: 10px;
+    background: #FFF;
+  }
